# dotenv-parser-comparisons

./: .gitignore  Makefile  README.md  pyproject.toml  readme.md  test.bash
.github/workflows/: check.yml  deploy.yml  main.yml
cases/bash-5.0.0/: run.bash
cases/js-dotenv-6.2.0/: package.json  run.js
cases/python-dotenv-0.10.1/: Pipfile
cases/python-dotenv-0.12.0/: Pipfile  run.py
cases/python-dotenv-0.9.1/: Pipfile
cases/ruby-dotenv-2.6.0/: Gemfile  run.rb
docker/: Dockerfile
docker/env_util/: print_env.py  with_env.py
docker/runners/bash/: run.bash
docker/runners/js-dotenv/: run.js
docker/runners/python-dotenv/: run.py
docker/runners/ruby-dotenv/: run.rb
printenv/: printenv.py
src/dotenv_parser_comparisons/: cli.py
