[tool.poetry]
name = "dotenv_parser_comparisons"
version = "0-dev"
description = ""
authors = ["Bertrand Bonnefoy-Claudet <bertrand@bertrandbc.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
progressbar2 = "*"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
isort = "*"
mypy = "*"
pylint = "*"

[tool.poetry.scripts]
dotenv-parser-comparisons = 'dotenv_parser_comparisons.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
